# Copyright (c) Huawei Technologies Co., Ltd. 2023. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

import("../../../build/ts.gni")
ohos_source_set("ftrace_tables") {
  subsystem_name = "${OHOS_PROFILER_SUBSYS_NAME}"
  part_name = "${OHOS_PROFILER_PART_NAME}"
  sources = [
    "animation_table.cpp",
    "app_startup_table.cpp",
    "callstack_table.cpp",
    "clk_event_filter_table.cpp",
    "clock_event_filter_table.cpp",
    "clock_snapshot_table.cpp",
    "cpu_measure_filter_table.cpp",
    "dma_fence_table.cpp",
    "dynamic_frame_table.cpp",
    "filter_table.cpp",
    "frame_maps_table.cpp",
    "frame_slice_table.cpp",
    "gpu_slice_table.cpp",
    "instants_table.cpp",
    "irq_table.cpp",
    "measure_table.cpp",
    "process_measure_filter_table.cpp",
    "process_table.cpp",
    "raw_table.cpp",
    "sched_slice_table.cpp",
    "so_static_initalization_table.cpp",
    "system_call_table.cpp",
    "system_event_filter_table.cpp",
    "task_pool_table.cpp",
    "thread_state_table.cpp",
    "thread_table.cpp",
    "timerfd_wakeup_table.cpp",
  ]

  include_dirs = [ "include" ]
  public_configs = [ "${SRC}/table/base:base_tables_cfg" ]

  if (!is_independent_compile) {
    configs = [ "${TS_DIR}/gn:ts_config" ]
  }
  if (enable_ts_utest && !use_wasm) {
    cflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
    ]
    ldflags = [
      "-fprofile-arcs",
      "-ftest-coverage",
      "--coverage",
    ]
    if (is_test) {
      cflags += [ "-D IS_UT" ]
    }
  }
}
